[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sanic-redis"
dynamic = ["version"]
description = "Adds redis support to Sanic"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "octal", email = "octalgah@gmail.com" }]
keywords = ["sanic", "redis", "hiredis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
dependencies = ["sanic>=25.0.0", "redis>=6.0.0,<7.0", "hiredis>=3.0.0,<4.0"]

[project.optional-dependencies]
test = [
    "sanic-testing>=24.6.0",
    "pytest>=7.0.0",
    "coverage",
    "pytest-asyncio",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/strahe/sanic-redis"

[tool.setuptools]
packages = ["sanic_redis"]
zip-safe = false

[tool.setuptools_scm]
version_file = "sanic_redis/_version.py"

[tool.setuptools.dynamic]
version = { attr = "sanic_redis._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = ["asyncio: marks tests as async (deselect with '-m \"not asyncio\"')"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:websockets.legacy is deprecated:DeprecationWarning:websockets.*",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by ruff format
]

[tool.ruff.lint.isort]
known-first-party = ["sanic_redis"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
